--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8">
-<title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</title>
+<title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ </title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
 <style>
@@ -31,6 +31,26 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 </style>
 </head>
 <body>
+
+<!-- 🔥 Firebase compat CLEAN INIT (FINAL) -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+<script>
+  window.firebaseConfig = {
+    apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+    authDomain: "vehicle-maintenance-64890.firebaseapp.com",
+    projectId: "vehicle-maintenance-64890",
+  };
+
+  if (!firebase.apps.length) {
+    firebase.initializeApp(window.firebaseConfig);
+  }
+
+  // GLOBAL db (used everywhere)
+  window.db = firebase.firestore();
+</script>
+
 
 <header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
@@ -137,15 +157,11 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 </div>
 </div>
 
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
+
 
 <script>
-const firebaseConfig = {
-  apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
-  authDomain: "vehicle-maintenance-64890.firebaseapp.com",
-  projectId: "vehicle-maintenance-64890"
-};
+
 
 
 
@@ -227,25 +243,6 @@ loadVehicles();
 
 <script>
 if("serviceWorker" in navigator){navigator.serviceWorker.register("sw.js");}
-</script>
-
-
-<!-- Firebase compat (FINAL FIX) -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
-    authDomain: "vehicle-maintenance-64890.firebaseapp.com",
-    projectId: "vehicle-maintenance-64890",
-  };
-
-  if (!firebase.apps.length) {
-    firebase.initializeApp(firebaseConfig);
-  }
-
-  window.db = firebase.firestore();
 </script>
 
 </body>
