--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="manifest" href="manifest.json">
+
 <style>
 :root{--primary:#2563eb;--danger:#dc2626;--bg:#f1f5f9}
 *{box-sizing:border-box}
@@ -20,6 +21,7 @@ button.danger{background:var(--danger)}
 th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 .modal{position:fixed;inset:0;background:rgba(0,0,0,.65);display:none;align-items:center;justify-content:center}
 .modal-box{background:#fff;width:96%;max-width:1500px;border-radius:36px;padding:44px;max-height:92vh;overflow:auto}
+.section-title{font-size:18px;font-weight:700;margin-bottom:12px}
 .badge{padding:6px 16px;border-radius:999px;font-size:12px;font-weight:700}
 .NEW{background:#fee2e2;color:#991b1b}
 .INPROGRESS{background:#fef3c7;color:#92400e}
@@ -28,20 +30,21 @@ th,td{padding:18px;border-bottom:1px solid #e5e7eb;vertical-align:top}
 .detail-row b{color:#1e3a8a}
 </style>
 </head>
+
 <body>
 
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
 <script>
 firebase.initializeApp({
-  apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
-  authDomain: "vehicle-maintenance-64890.firebaseapp.com",
-  projectId: "vehicle-maintenance-64890",
+ apiKey: "AIzaSyCowDEvUQpBmq7AwUGiC6IuGOudPhi_0kM",
+ authDomain: "vehicle-maintenance-64890.firebaseapp.com",
+ projectId: "vehicle-maintenance-64890"
 });
-const db=firebase.firestore();
+const db = firebase.firestore();
 </script>
 
-<header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์</header>
+<header>🚗 SC THE ADVENTURE | ระบบซ่อมบำรุงรถยนต์ (Realtime)</header>
 
 <div class="container">
 <div class="card grid">
@@ -53,7 +56,9 @@ const db=firebase.firestore();
 <table class="table">
 <thead>
 <tr>
-<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th><th>ผู้ซ่อม</th><th>ค่าใช้จ่าย</th><th>สถานะ</th><th>รายละเอียด</th><th>ลบ</th>
+<th>วันที่</th><th>รถ</th><th>ระบบ</th><th>อาการ</th>
+<th>ผู้ซ่อม</th><th>ค่าใช้จ่ายรวม</th>
+<th>สถานะ</th><th>รายละเอียด</th><th>ลบ</th>
 </tr>
 </thead>
 <tbody id="tbody"></tbody>
@@ -61,99 +66,132 @@ const db=firebase.firestore();
 </div>
 </div>
 
+<!-- FORM MODAL -->
 <div class="modal" id="modal">
 <div class="modal-box">
-<h2>บันทึกการซ่อม</h2>
+<h2>บันทึกรายละเอียดการซ่อมบำรุง (Ultra Detail)</h2>
+
+<div class="grid">
 <input id="plate" placeholder="ทะเบียนรถ">
 <input id="brand" placeholder="ยี่ห้อ">
 <input id="model" placeholder="รุ่น">
+<input id="year" placeholder="ปีรถ">
+<input id="vin" placeholder="VIN">
+<input id="engineNo" placeholder="Engine No">
+<input id="mileage" placeholder="เลขไมล์">
+<input id="fuelType" placeholder="ประเภทเชื้อเพลิง">
+<input id="usageType" placeholder="ลักษณะการใช้งาน">
 <input type="date" id="date">
 <input id="system" placeholder="ระบบที่ซ่อม">
-<textarea id="symptoms" placeholder="อาการ"></textarea>
-<input id="technician" placeholder="ช่าง">
+<select id="status">
+<option>NEW</option>
+<option>INPROGRESS</option>
+<option>DONE</option>
+</select>
+<input id="technician" placeholder="ชื่อช่าง">
 <input id="partsCost" type="number" placeholder="ค่าอะไหล่">
 <input id="laborCost" type="number" placeholder="ค่าแรง">
-<button onclick="save()">บันทึก</button>
+<input id="otherCost" type="number" placeholder="ค่าใช้จ่ายอื่น">
+</div>
+
+<textarea id="symptoms" placeholder="อาการเสีย"></textarea>
+<textarea id="repairMethod" placeholder="วิธีการซ่อม"></textarea>
+<textarea id="remark" placeholder="หมายเหตุ"></textarea>
+
+<div class="grid">
+<button onclick="save()">บันทึกข้อมูล</button>
 <button class="danger" onclick="closeModal()">ยกเลิก</button>
 </div>
 </div>
+</div>
 
+<!-- DETAIL MODAL -->
 <div class="modal" id="detailModal">
 <div class="modal-box">
-<h2>รายละเอียด</h2>
+<h2>📄 รายละเอียดการซ่อมบำรุง</h2>
 <div id="detailContent"></div>
 <button class="danger" onclick="closeDetail()">ปิด</button>
 </div>
 </div>
 
 <script>
+let unsubscribe=null;
+
 function openModal(){modal.style.display='flex'}
 function closeModal(){modal.style.display='none'}
 function closeDetail(){detailModal.style.display='none'}
 
 function loadVehicles(){
-  db.collection("vehicles").onSnapshot(s=>{
-    vehicleSelect.innerHTML="";
-    s.forEach(d=>{
-      let o=document.createElement("option");
-      o.value=d.id;o.textContent=d.id;
-      vehicleSelect.appendChild(o);
-    });
-    if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
+ db.collection("vehicles").onSnapshot(s=>{
+  vehicleSelect.innerHTML="";
+  s.forEach(d=>{
+    let o=document.createElement("option");
+    o.value=d.id;o.textContent=d.id;
+    vehicleSelect.appendChild(o);
   });
+  if(vehicleSelect.value) loadRepairs(vehicleSelect.value);
+ });
 }
 vehicleSelect.onchange=()=>loadRepairs(vehicleSelect.value);
 
 function loadRepairs(v){
-  db.collection("vehicles").doc(v).collection("repairs").onSnapshot(s=>{
-    tbody.innerHTML="";
-    s.forEach(doc=>{
-      let r=doc.data();
-      let cost=(+r.partsCost||0)+(+r.laborCost||0);
-      tbody.innerHTML+=`
-      <tr>
-        <td>${r.date||""}</td>
-        <td>${v}</td>
-        <td>${r.system||""}</td>
-        <td>${r.symptoms||""}</td>
-        <td>${r.technician||""}</td>
-        <td>${cost}</td>
-        <td><span class="badge ${r.status||"NEW"}">${r.status||"NEW"}</span></td>
-        <td><button onclick='openDetail(${JSON.stringify(r)})'>ดูรายละเอียด</button></td>
-        <td><button class="danger" onclick="deleteRec('${v}','${doc.id}')">ลบ</button></td>
-      </tr>`;
-    });
+ if(unsubscribe) unsubscribe();
+ unsubscribe=db.collection("vehicles").doc(v).collection("repairs").orderBy("createdAt","desc")
+ .onSnapshot(s=>{
+  tbody.innerHTML="";
+  s.forEach(doc=>{
+    let r=doc.data();
+    let cost=(+r.partsCost||0)+(+r.laborCost||0)+(+r.otherCost||0);
+    tbody.innerHTML+=`
+    <tr>
+      <td>${r.date||""}</td>
+      <td>${v}</td>
+      <td>${r.system||""}</td>
+      <td>${(r.symptoms||"").slice(0,50)}...</td>
+      <td>${r.technician||""}</td>
+      <td>${cost.toLocaleString()}</td>
+      <td><span class="badge ${r.status||"NEW"}">${r.status||"NEW"}</span></td>
+      <td><button onclick='openDetail(${JSON.stringify(r)})'>ดูรายละเอียด</button></td>
+      <td><button class="danger" onclick="deleteRec('${v}','${doc.id}')">ลบ</button></td>
+    </tr>`;
   });
+ });
 }
 
 function save(){
-  if(!plate.value)return alert("กรอกทะเบียนรถ");
-  let key=plate.value+" "+brand.value+" "+model.value;
-  let ref=db.collection("vehicles").doc(key);
-  ref.set({updated:new Date()},{merge:true});
-  ref.collection("repairs").add({
-    date:date.value,system:system.value,symptoms:symptoms.value,
-    technician:technician.value,partsCost:partsCost.value,laborCost:laborCost.value,
-    createdAt:new Date()
-  }).then(()=>{
-    closeModal();
-    loadRepairs(key);
-  });
+ if(!plate.value) return alert("กรุณากรอกทะเบียนรถ");
+ let key = plate.value+" | "+brand.value+" "+model.value;
+ let ref = db.collection("vehicles").doc(key);
+ ref.set({updated:new Date()},{merge:true});
+ ref.collection("repairs").add({
+  plate:plate.value,brand:brand.value,model:model.value,year:year.value,
+  vin:vin.value,engineNo:engineNo.value,mileage:mileage.value,
+  fuelType:fuelType.value,usageType:usageType.value,
+  date:date.value,system:system.value,status:status.value,
+  technician:technician.value,partsCost:partsCost.value,
+  laborCost:laborCost.value,otherCost:otherCost.value,
+  symptoms:symptoms.value,repairMethod:repairMethod.value,
+  remark:remark.value,createdAt:new Date()
+ }).then(()=>{
+  closeModal();
+  loadRepairs(key);
+ });
 }
 
 function deleteRec(v,id){
-  if(confirm("ลบรายการนี้?")){
-    db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
-  }
+ if(confirm("ยืนยันลบรายการนี้?")){
+  db.collection("vehicles").doc(v).collection("repairs").doc(id).delete();
+ }
 }
 
 function openDetail(d){
-  let html="";
-  Object.keys(d).forEach(k=>{
-    html+=`<div class="detail-row"><b>${k}</b><div>${d[k]}</div></div>`;
-  });
-  detailContent.innerHTML=html;
-  detailModal.style.display="flex";
+ let html="";
+ Object.keys(d).forEach(k=>{
+  if(!d[k]) return;
+  html+=`<div class="detail-row"><b>${k}</b><div>${d[k]}</div></div>`;
+ });
+ detailContent.innerHTML=html;
+ detailModal.style.display="flex";
 }
 
 loadVehicles();
